--- a/app/views/payment_mailer/new_payment_email.text.erb
+++ b/app/views/payment_mailer/new_payment_email.text.erb
@@ -1,1 +1,6 @@
-Here`s new payment for <%= @payment.sum %>EURO
+Here`s new payment for loan <%= @loan_sum %>$, lended by <%= @lender_name %>
+loan percentage <%= @loan_percentage %>%
+static return value <%= @static_return_value %>$
+payment sum <%= @payment_sum %>$
+
+Please, pay off debt until <%= @pay_until %>.
