--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
-    <%= yield %>
+    <h1>Welcome to loan management system</h1>
+    <div class="form">
+      <%= yield %>
+    </div>
   </body>
 </html>
