smtp for heroku

--- a/app/views/payment_mailer/new_payment_email.html.erb
+++ b/app/views/payment_mailer/new_payment_email.html.erb
@@ -10,6 +10,6 @@
 
   <p><b>payment sum <%= @payment_sum %>$</b></p>
 
-  <p>Please, pay off debt until <%= @pay_until %>.</p>
+  <p>Please, pay off debt before <%= @pay_until %>.</p>
 </body>
 </html>
