--- a/app/views/payment_mailer/new_payment_email.text.erb
+++ b/app/views/payment_mailer/new_payment_email.text.erb
@@ -2,4 +2,4 @@ Here`s new payment for loan <%= @loan_sum %>$, lended by <%= @lender_name %>
 loan percentage <%= @loan_percentage %>%
 payment sum <%= @payment_sum %>$
 
-Please, pay off debt until <%= @pay_until %>.
+Please, pay off debt before <%= @pay_until %>.
